derive/tests/snapshots/disallow_change/Score/get_all_scores.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `score` table.
    pub fn get_all_scores<'a>(&'a self) -> impl Iterator<Item = Score> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().score().iter()
    }
}
